--- a/myapp/templates/editor.html
+++ b/myapp/templates/editor.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
-<html lang="ja">
+{% extends "base.html" %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>そどわすたじお</title>
-</head>
+<h1>そどわすたじお</h1>
+<h2>新規作成</h2>
+<tr>
+    キャラクター名：<input name="character_name"><br>
+    知力：
+    <select name="character_intelligence">
+        {% for i in range(2, 19) %}
+        <option value="{{ i }}">{{ i }}</option>
+        {% endfor %}
+    </select>
+    <br>
+    <p>{{ random_number }}</p>
+</tr>
+<a href="{{url_for('index') }}">新規保存</a>
 
-<body>
-    <h1>そどわすたじお</h1>
-    <p>編集画面</p>
-</body>
-
-</html>
+{% endblock %}
