--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -16,6 +16,6 @@
     </tr>
 </table>
 {% endfor %}
-<a href="{{url_for('editor') }}">新規作成</a>
+<a href="{{url_for('create') }}">新規作成</a>
 
 {% endblock %}
