--- a/myapp/templates/create.html
+++ b/myapp/templates/create.html
@@ -5,19 +5,19 @@
 <h2>新規作成</h2>
 <form method="POST">
     キャラクター名：<input name="name">
-    種族：
+    <!-- 種族：
     <select name="race">
         {% for race in race_features.keys %}
         <option value="{{ race }}">{{ race }}</option>
         {% endfor %}
-    </select>
+    </select> -->
     <!-- <select name="sub_race">
         {% for sub_race in sub_races %}
         <option value="{{ sub_race }}">{{ sub_race }}</option>
         {% endfor %}
     </select> -->
     <br>
-    種族特徴：<p>{{ race_features.get(race) }}</p>
+    <!-- 種族特徴：<p>{{ race_features.get(race) }}</p> -->
     穢れ：
     <select name="impurity">
         {% for i in range(1, 6) %}
