--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -2,6 +2,10 @@
 {% block content %}
 
 <h1>そどわすたじお</h1>
+<div>
+    <p>{{ username }}</p>
+    <a href="{{url_for('logout')}}">ログアウト</a>
+</div>
 <h2>キャラクター一覧</h2>
 <a href="{{url_for('create') }}">新規作成</a>
 {% for character in characters %}
