--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -4,10 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+    <title>そどわすたじお</title>
+    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/image/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/image/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/image/favicon-16x16.png">
+    <link rel="manifest" href="/static/image/site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/image/favicon.ico">
 </head>
 
 <body>
+    <div class="DarkMode">
+        <button type="button" aria-label="ライトモードにする" id="DarkMode-off" class="DarkMode-off">
+            ライトモード
+        </button>
+        <button type="button" aria-label="ダークモードにする" id="DarkMode-on" class="DarkMode-on">
+            ダークモード
+        </button>
+    </div>
     {% block content %}
     {% endblock %}
 </body>
