--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,20 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>そどわすたじお</h1>
-<div>
-    <p>{{ username }}</p>
-    <a href="{{url_for('logout')}}">ログアウト</a>
-</div>
-<h2>キャラクター一覧</h2>
-<a href="{{url_for('create') }}">新規作成</a>
-{% for character in characters %}
-<div>
-    <a href="/{{ character.id }}/update">{{ character.name }}</a>
-    <p>{{ character.update_time }}</p>
-    <button onclick="location.href='/{{ character.id }}/delete'">削除</button>
+<div class="col-4">
+    <p>キャラクター一覧</p>
+    <a href="{{url_for('create') }}">新規作成</a>
     <br>
+    {% for character in characters %}
+    <div>
+        <a href="/{{ character.id }}/update">{{ character.name }}</a>
+    </div>
+    <div>
+        <p>{{ character.update_time }}</p>
+    </div>
+    <div>
+        <button type="button" class="btn btn-outline-secondary btn-sm">ココフォリア駒出力</button>
+        <button type="button" class="btn btn-outline-secondary btn-sm">複製</button>
+        <button type="button" class="btn btn-outline-danger btn-sm"
+            onclick="location.href='/{{ character.id }}/delete'">削除</button>
+    </div>
+    <br>
+    {% endfor %}
 </div>
-{% endfor %}
 
 {% endblock %}
