--- a/myapp/static/css/style.css
+++ b/myapp/static/css/style.css
@@ -5,15 +5,55 @@
 }
 
 :root {
-    --primary: #0d6efd;
+    --primary: #ff5500;
     --dark: #21252f;
     --body: #888;
-    /* --orange: rgb(221, 155, 94); */
-    --box-shadow: 0 8px 22px rgba(0, 0, 0, 0.2);
 }
 
 body {
+    height: 100%;
     font-family: Sora, "sans-serif";
-    line-height: 1.7;
     color: var(--body);
+}
+
+.form-signup {
+    max-width: 330px;
+    padding: 1rem;
+}
+
+.form-signup .form-floating:focus-within {
+    z-index: 2;
+}
+
+.form-signup input[type="text"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.form-signup input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.form-login {
+    max-width: 330px;
+    padding: 1rem;
+}
+
+.form-login .form-floating:focus-within {
+    z-index: 2;
+}
+
+.form-login input[type="text"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.form-login input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
