--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -27,8 +27,8 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-md">
+        <nav class="navbar navbar-expand-md bg-body-tertiary">
+            <div class="container-xxl">
                 <a class="navbar-brand" href="{{url_for('index') }}">そどわすたじお</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -53,18 +53,24 @@
                         </li>
                         {% endif %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ヘルプ</a>
+                            <a class="nav-link" href="{{url_for('help')}}">ヘルプ</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="row">
-        <div class="col-3"></div>
+    <div class="inline fixed_layout">
+
         {% block content %}
         {% endblock %}
-        <div class="col-3"></div>
+
+        <aside class="left_sidebar">
+        </aside>
+        <aside class="right_sidebar">
+        </aside>
+        <aside class="footbar">
+        </aside>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
