--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,22 +1,30 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="col-4">
-    <p>キャラクター一覧</p>
-    <a href="{{url_for('create') }}">新規作成</a>
+<div class="ms-2 me-2">
+    <p class="fs-4">キャラクター一覧</p>
+    <div class="d-grid gap-2">
+        <a class="btn btn-primary" role="button" href="{{url_for('create') }}">キャラクター新規作成</a>
+    </div>
     <br>
     {% for character in characters %}
-    <div>
-        <a href="/{{ character.id }}/update">{{ character.name }}</a>
-    </div>
-    <div>
-        <p>{{ character.update_time }}</p>
-    </div>
-    <div>
-        <button type="button" class="btn btn-outline-secondary btn-sm">ココフォリア駒出力</button>
-        <button type="button" class="btn btn-outline-secondary btn-sm">複製</button>
-        <button type="button" class="btn btn-outline-danger btn-sm"
-            onclick="location.href='/{{ character.id }}/delete'">削除</button>
+    <div class="container-md">
+        <div class="row">
+            <div class="col-5">
+                <a class="fs-5" href="/{{ character.id }}/update">{{ character.name }}</a>
+            </div>
+            <div class="col-md-auto">
+                <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                    <button type="button" class="btn btn-outline-secondary">ココフォリア駒出力</button>
+                    <button type="button" class="btn btn-outline-secondary">複製</button>
+                    <button type="button" class="btn btn-outline-danger"
+                        onclick="location.href='/{{ character.id }}/delete'">削除</button>
+                </div>
+            </div>
+            <div class="col-md-2 text-end">
+                <p>{{ character.update_time }}</p>
+            </div>
+        </div>
     </div>
     <br>
     {% endfor %}
