--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -1,10 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
 
-<form method="POST">
-    ユーザー名：<input type="text" name="username">
-    パスワード：<input type="password" name="password">
-    <input type="submit" value="ログイン">
-</form>
-<a href="{{url_for('signup')}}">新規登録</a>
+<main class="form-login w-100 mt-5 m-auto">
+    <form method="POST">
+        <img class="mb-4" src="../static/image/android-chrome-512x512.png" alt="" width="65" height="65">
+        <h1 class="h3 mb-3 fw-normal">ログイン</h1>
+        <div class="form-floating">
+            <input type="text" class="form-control" id="floatingLoginUsername" name="username" placeholder="User Name"
+                required>
+            <label class="fw-light" for="floatingLoginUsername">ユーザー名</label>
+        </div>
+        <div class="form-floating">
+            <input type="password" class="form-control" id="floatingLoginPassword" name="password"
+                placeholder="Password" required>
+            <label class="fw-light" for="floatingLoginPassword">パスワード</label>
+        </div>
+        <button class="btn btn-primary w-100 py-2" type="submit">ログイン</button>
+    </form>
+    <br>
+    <a href="{{url_for('signup')}}">アカウント新規登録はこちら</a>
+</main>
 {% endblock %}
