--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -29,7 +29,11 @@
     <header>
         <nav class="navbar navbar-expand-md bg-body-tertiary">
             <div class="container-xxl">
-                <a class="navbar-brand" href="{{url_for('index') }}">そどわすたじお</a>
+                <a class="navbar-brand" href="{{url_for('index') }}">
+                    <img src="../static/image/android-chrome-512x512.png" alt="Logo" width="30" height="30"
+                        class="d-inline-block align-text-top">
+                    そどわすたじお
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
