create.htmlの見栄えをbootstrapで整えました。作業を継続します。

--- a/myapp/static/css/style.css
+++ b/myapp/static/css/style.css
@@ -76,3 +76,21 @@ body {
         vertical-align: middle;
     }
 }
+
+dl {
+    margin-bottom: 0px !important;
+}
+
+dd {
+    margin-bottom: 3px !important;
+}
+
+@media (min-width: 800px) {
+    .container-fluid.custom-container {
+        max-width: 900px !important;
+    }
+}
+
+dt {
+    font-size: 14px;
+}
