--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -15,13 +15,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../static/image/favicon-16x16.png">
     <link rel="manifest" href="../static/image/site.webmanifest">
     <link rel="shortcut icon" type="image/x-icon" href="../static/image/favicon.ico">
-    <script>
-        (function (global) {
-            if (localStorage.getItem("dark")) {
-                global.document.documentElement.classList.add("Dark");
-            }
-        })(globalThis);
-    </script>
+    <link rel="icon" type="image/png" sizes="192x192" href="../static/image/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="../static/image/android-chrome-512x512.png">
     <script src="../static/js/script.js" defer></script>
 </head>
 
